--- a/src/components/ui/Hero.astro
+++ b/src/components/ui/Hero.astro
@@ -8,12 +8,12 @@ const {fullName, title, institute, profilePicture} = Astro.props
 ---
 <div class='flex-1'>
   <h1 class='text-4xl font-bold mb-4'>
-    Welcome! I'm <span class='text-secondary'>{fullName}</span>
+    Selamat Datang! Saya <span class='text-secondary'>Annisa Yulianti</span>
   </h1>
   <p class='text-xl text-gray-600 mb-4'>{title}{institute ? ` at ${institute}` : ''}</p>
   <p class='text-lg mb-6'>
-    Brief impactful description of your research focus and academic mission.
-    Highlight your key contributions and areas of expertise.
+    Fokus riset saya berada pada bidang rekayasa jaringan dan konfigurasi sistem, 
+    khususnya dalam mengoptimalkan akses nirkabel dan keamanan jaringan menggunakan platform MikroTik dan Mikhmon.
   </p>
   <div class='flex gap-4'>
     <SocialIcons />
